--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,10 @@ dev_dependencies:
   cloud_firestore: ^4.1.0
   firebase_auth: ^4.1.4
   firebase_storage: ^11.0.6
+  flutter_redux: ^0.10.0
   flutter_test:
     sdk: flutter
+  redux_logging: ^0.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
