--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.1.6
   image_picker: ^0.8.6
+  provider: ^6.0.5
 
 dev_dependencies:
   blackfoot_flutter_lint: ^1.0.6
