--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.1
   firebase_core: ^2.4.0
+  firebase_crashlytics: ^3.0.8
   firebase_storage: ^11.0.8
   flutter:
     sdk: flutter
