--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_storage: ^11.0.8
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.11.0
   flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^1.1.6
   image_picker: ^0.8.6
@@ -54,6 +55,11 @@ dev_dependencies:
     sdk: flutter
   redux_logging: ^0.5.0
 
+flutter_icons:
+  ios: true
+  android: true
+  image_path_android: "assets/android_icon.png"
+  image_path_ios: "assets/ios_icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
