--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ flutter_icons:
   android: true
   image_path_android: "assets/android_icon.png"
   image_path_ios: "assets/ios_icon.png"
+  web:
+    generate: true
+    image_path: "assets/ios_icon.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
